# swagger_output.json
@@ -123,6 +123,27 @@
         }
       }
     },
+    "/api/stroyka/get/altcategories/{uniqId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "uniqId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/stroyka/get/altcategoriesBySubCatID/{slug}": {
       "get": {
         "description": "",
@@ -158,7 +179,28 @@
         }
       }
     },
-    "/api/stroyka/get/subcategoriesByCatID/{slug}": {
+    "/api/stroyka/get/subcategories/{slug}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/stroyka/get/getSubCatsByCatSlug/{slug}": {
       "get": {
         "description": "",
         "parameters": [
@@ -189,6 +231,27 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/stroyka/get/categoriesByUniqID/{uniqId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "uniqId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
